--- a/.github/workflows/publish-vscode-extension.yml
+++ b/.github/workflows/publish-vscode-extension.yml
@@ -21,8 +21,8 @@ jobs:
 
       - name: Bump version
         run: |
-          git config --global user.email "github-actions@github.com"
-          git config --global user.name "GitHub Actions"
+          git config --global user.email "antonio.novoa@outlook.es"
+          git config --global user.name "anovoa"
           npm version patch -m "Bump version to %s [skip ci]"
           git push --follow-tags
         env:
