--- a/Git-to-AL-project-configurator/package.json
+++ b/Git-to-AL-project-configurator/package.json
@@ -15,6 +15,11 @@
   "scripts": {
     "compile": "node ./src/extension.js"
   },
+    "activationEvents": [
+    "onCommand:extension.syncRepo",
+    "onLanguage:al",
+    "onStartupFinished"
+  ],
   "contributes": {
     "commands": [
       {
