--- a/.github/workflows/publish-vscode-extension.yml
+++ b/.github/workflows/publish-vscode-extension.yml
@@ -20,17 +20,17 @@ jobs:
       with:
         node-version: '20'
     - name: Install dependencies
-      run: npm install ${{github.workspace}}/Git-to-AL-project-configurator/
+      run: npm install ${{ github.workspace }}/Git-to-AL-project-configurator/
     - name: Install vsce globally
       run: npm install -g vsce
     - name: package vsc Install
       run: |
         cd ${{ github.workspace }}/Git-to-AL-project-configurator/
-        vsce package --out ${{github.workspace}}/GittoALprojectconfig.vsix
+        vsce package --out ${{ github.workspace }}/GittoALprojectconfig.vsix
     - name: Upload Build Artifacts
       uses: actions/upload-artifact@v4
       with:
-          name: Git-to-AL-project-configurator.vsix
+          name: GittoALprojectconfig.vsix
           path: ${{ github.workspace }}/GittoALprojectconfig.vsix
           if-no-files-found: error
     - name: Upload Repository
